# research-agent

./: .gitignore  main.py  pyproject.toml
src/: __init__.py  agents.py  config.py  prompts.py  tasks.py  tools.py
