[project]
name = "agent"
version = "0.1.0"
description = "Multi-agent research system with APA citations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai[google-genai]>=1.14.0",
    "crewai-tools>=0.40.0",
    "duckduckgo-search>=7.0.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.2.1",
]
